[package]
name = "clg"
version = "0.1.0"
edition = "2021"
description = "CLI utility to manage external dependencies"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
indexmap = "2.7.0"
ishell = { version = "0.1.3", features = ["logging"] }
log = "0.4.24"
